<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/iniciosec"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/login"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/corroLogin"
                android:hint="@string/correologin"
                android:textColorHint="#fff"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:background="@drawable/circulovacio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:importantForAutofill="yes" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/contrasenalogin"
                android:hint="@string/contasenalogin"
                android:inputType="textPassword"
                android:background="@drawable/circulovacio"
                android:textColorHint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="yes" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ingresar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:onClick="iniciosesion"

            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/VerdeMain"
            android:textSize="18dp"
            android:textStyle="bold"
            app:strokeColor="@color/VerdeMain"
            app:strokeWidth="3dp"
            android:text="@string/Ingresar" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>